<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_connector</name>
  <version>1.1.1</version>
  <description>ROS2 to VDA5050 / VDA5050 to ROS2 connector</description>
  <maintainer email="leandro@inorbit.ai">Leandro Pineda</maintainer>
  <author email="alejandro.duarte@ekumenlabs.com">John Alejandro Duarte Carrasco</author>
  <author email="leandro@inorbit.ai">Leandro Pineda</author>
  <license file="LICENSE">BSD Clause 3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>python3-paho-mqtt</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vda5050_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy_message_converter</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>


  <export>
  </export>
</package>
